# flying_knots_public

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
common/: __init__.py  config.py  data.py  estimation.py  math.py  mocap.py  params.py  solver.py  spline.py  tracker.py  visualize.py
config/demo/: overhand_human.yaml
config/hardware/: xarm_vicon_overhand.yaml
config/ik/: xarm_ik_params.yaml
config/learning/: particle_overhand_learning.yaml  real_overhand_learning.yaml
config/mocap_objects/: krishna_overhand_handle.yaml  krishna_xarm_new.yaml
config/simulation/: drake_rope.yaml  elastica_rope.yaml  particle_model_cleat.yaml  particle_model_overhand.yaml  particle_model_whip.yaml
docs/: architecture.md
main/: clean_demo.py  compute_ik.py  hardware_track_debug.py  human_capture.py  learning.py  run_trajectory.py  visualize.py
models/: package.xml
models/handles/: README.md
models/rope/: __init__.py  rope_model_generator.py
models/rope/configs/: rope_ball.yaml  (+2 more)
models/xarm_description/: NOTICE.md  package.xml  xarm7.sdf  xarm7.urdf  xarm7_3_link.sdf  xarm7_3_link_float.sdf  xarm7_no_hand.sdf  xarm7_no_hand_float.sdf  xarm7_no_hand_float_con.sdf  xarm7_no_hand_rot.sdf  xarm7_original.sdf  xarm7_original.urdf
simulation/: __init__.py  drake_rope.py  elastica_rope.py  forward_model.py  inverse_model.py  kin_test.py  particle_dynamics.py  spring_mass_damper.py
simulation/elastica/: rope_test.py
xarm7/: __init__.py  data.py  interface.py  kinematics.py  socket_data.py  visualize.py
xarm7/data/: default_joint_params.gcode
(+8 files in other folders)
